[package]
name = "gitmover"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.31"
homedir = "0.3.4"
serde_json = "1.0.140"
serde = {version="1.0.218", features=["derive"]}
dircpy = "0.3.19"
git2 = "0.20.0"
uuid = { version = "1.15.1", features = ["v4"] }
log = "0.4.26"
env_logger = "0.11.7"
